syntax = "proto3";

package ru.alfabank.grpc;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.alfabank.grpc";
option java_outer_classname = "BankOrderProto";

message BankOrderExecRequest {
string operation_external_uid = 1;
google.protobuf.Timestamp operation_date = 2;
uint64 amount = 3;
string amount_currency = 4;

string payer_account = 5;
optional string payer_name = 6;

string payee_account = 7;
optional string payee_name = 8;

string payment_purpose = 9;
uint32 payment_priority = 10;
}

message BankOrderExecResponse {
enum OperationStatus {
OPERATION_STATUS_DRAFT = 0;
OPERATION_STATUS_EXECUTED = 1;
OPERATION_STATUS_DECLINED = 2;
OPERATION_STATUS_ERROR = 3;
}

OperationStatus operation_status = 1;
optional string operation_error = 2;
optional string operation_error_message = 3;
}

service SettlementOperationService {
rpc ExecBankOrder (BankOrderExecRequest) returns (BankOrderExecResponse);
}